# researchstack-on-aws

./: .cfnlintrc  .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  ash-scan-remediation-report.csv  deploy.sh  pcluster-ash-scan
.github/: pull_request_template.md
ADRs/: 0001-service-catalog-simplification.md  0002-parallelcluster-security-hardening.md  0003-parallelcluster-multi-queue-login-nodes.md  0004-parallelcluster-generalization.md  0005-efs-vpc-cidr-security-group.md  0005-parallelcluster-expansion-via-cli.md  0006-parallelcluster-template-fixes-and-fsx-integration.md  0007-cost-governance-budgets-and-idle-shutdown.md
docs/: cost-optimization-guide.md  faq.md  parallelcluster-guide.md  (+2 more)
service-catalog/: README.md  app.py  cdk.json  framework_config.yaml  pyproject.toml
service-catalog/core/: framework_config.py  portfolio_config.py
service-catalog/portfolios/: research-computing.toml
service-catalog/sc_constructs/: base_stackset_template.py  launch_role.py  launch_role_stackset_template.py  portfolio_share.py  stackset_factory.py
service-catalog/stacks/: assets_stack.py  portfolio_stack.py
service-catalog/tests/: conftest.py  test_assets_stack.py  test_cdk_nag.py  test_config.py  test_framework_config.py  test_portfolio_config.py  test_portfolio_stack.py  test_resource_naming.py
service-catalog/tests/fixtures/: valid_framework_config.yaml
service-catalog/tests/fixtures/portfolios/: test-portfolio.toml
service-catalog/utils/: config.py  resource_naming.py  tagging.py
(+37 files in other folders)
