# Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
# SPDX-License-Identifier: Apache-2.0
[project]
name = "rs-service-catalog"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.181.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "cdk-nag>=2.28"]

[tool.setuptools.packages.find]
include = ["core*", "sc_constructs*", "stacks*", "utils*"]
exclude = ["tests*"]
